# hyperion

./: .gitignore  README.md  pyproject.toml  start.sh
.claude/agents/: hyperion.md
.claude/skills/scan/: SKILL.md
src/hyperion/: __init__.py  server.py
src/hyperion/dashboard/: app.py
src/hyperion/dashboard/static/: dashboard.js  styles.css
src/hyperion/dashboard/templates/: index.html
src/hyperion/knowledge/: agent_threats.json  decision_rules.json  graph_loader.py  loader.py  security_tools.json  threat_vectors.json
src/hyperion/tools/: __init__.py  _shared.py  assess_threat.py  log_finding.py  monitor_threat.py  plan_remediation.py  scan_code.py
tests/: conftest.py  test_knowledge.py  test_tools.py
