[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperion"
version = "0.1.0"
description = "Security Titan — Vulnerability detection, threat modeling, and active defense for code and AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Reza Malik" }]
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
graph = ["real-ladybug>=0.15.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "real-ladybug>=0.15.0",
]

[project.scripts]
hyperion = "hyperion.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
